Update with CRUD functionality

--- a/src/index.html
+++ b/src/index.html
@@ -9,10 +9,10 @@
 </head>
 <body class="body">
   <div id="container">
-    <h1 class="header">Today's To Do<i class="fas fa-sync"></i></h1>
+    <h1 class="header">Today's To Do<i class="fas fa-sync" id="refresh-icon"></i></h1>
     <div class="input-container">
       <input class="addtaks" type="text" id="task-input" placeholder="Add to your list...">
-      <i class="fa-solid fa-arrow-turn-down fa-rotate-90"></i>  
+      <i class="fas fa-plus" id="add-icon"></i>
     </div>
     <div id="todo-list"></div>
     <button id="clear-button">Clear all completed</button>
